--- a/config/dev/Dockerfile
+++ b/config/dev/Dockerfile
@@ -1,43 +1,24 @@
-FROM node:13.13-alpine3.10 AS client-builder
+FROM node:14-alpine3.12 AS client-builder
 
 RUN mkdir /app/
 WORKDIR /app/
-COPY ./package.json ./yarn.lock ./webpack.config.ts ./tsconfig.json /app/
-COPY ./src /app/src
+COPY ./package.json ./yarn.lock /app/
 
-RUN yarn install \
-  && yarn run build:dev \
-  && yarn install --prod
+RUN yarn install --prod
 
-FROM python:3.8.5-slim
+FROM python:3.8.6-slim
 
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8 PYTHONUNBUFFERED=1
 
 WORKDIR /app/
-RUN set -ex \
-  && RUN_DEPS=" \
-  libpcre3 \
-  mime-support \
-  " \
-  && seq 1 8 | xargs -I{} mkdir -p /usr/share/man/man{} \
-  && apt-get update && apt-get install -y --no-install-recommends $RUN_DEPS \
-  && rm -rf /var/lib/apt/lists/*
+COPY ./bin/install-run-deps.sh /
+RUN ["/bin/bash", "-c", "/install-run-deps.sh"]
 
-COPY requirements-dev.txt /requirements.txt
-RUN set -ex \
-  && BUILD_DEPS=" \
-  build-essential \
-  libpcre3-dev \
-  " \
-  && apt-get update && apt-get install -y --no-install-recommends $BUILD_DEPS \
-  && pip install --no-cache-dir -r /requirements.txt \
-  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false $BUILD_DEPS \
-  && rm -rf /var/lib/apt/lists/* \
-  && rm /requirements.txt
+COPY requirements-dev.txt ./bin/install-build-deps.sh /
+RUN ["/bin/bash", "-c", "/install-build-deps.sh /requirements-dev.txt"]
+VOLUME ["/pip-cache"]
 
 COPY . /app
-COPY --from=client-builder /app/holdmypics/core/templates/base-out.html /app/holdmypics/core/templates/base-out.html
-COPY --from=client-builder /app/static/dist /app/static/dist
 COPY --from=client-builder /app/node_modules /app/node_modules
 
 ARG APP_USER=appuser
@@ -45,10 +26,9 @@ RUN groupadd -r ${APP_USER} && useradd --create-home --no-log-init -r -g ${APP_U
 
 RUN mkdir -p /app/.cache/images
 RUN chown -R ${APP_USER}:${APP_USER} /app/
-RUN chmod +x /app/docker-entrypoint.sh
+# RUN chmod +x /app/bin/docker-entrypoint.sh
 
 EXPOSE 8080
-
 USER ${APP_USER}:${APP_USER}
 
 CMD ["gunicorn", "wsgi:application", "--config", "python:gunicorn_config"]
