--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdmypics"
-version = "0.16.1"
+version = "0.17.0"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -21,10 +21,10 @@ Pillow = "^8.0"
 semver = "^2.9.1"
 tomlkit = "^0.7.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
-
+# Test Dependencies
 pytest = { version = "^6.0", optional = true }
 pytest-cov = { version = "^2.8.1", optional = true }
-pytest-html = { version = "^2.0.0", optional = true }
+pytest-html = { version = "^3", optional = true }
 hypothesis = { version = "^5", optional = true }
 pytesseract = { version = "^0.3.4", optional = true }
 
@@ -34,7 +34,7 @@ isort = "^5.0"
 memory_profiler = "^0.58.0"
 pre-commit = "^2.3.0"
 psutil = "^5.6.5"
-ptpython = "^3.0.0"
+ptpython = "^3"
 toml = "^0.10.0"
 
 [tool.poetry.extras]
@@ -50,6 +50,7 @@ holdmyplugin = "plugin.holdmyplugin"
 profile = "black"
 known_first_party = ["config", "holdmypics"]
 no_lines_before = "LOCALFOLDER"
+combine_as_imports = true
 
 [tool.black]
 line-length = 88
