--- a/.gitignore
+++ b/.gitignore
@@ -428,3 +428,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/node,ruby,macos,python,django,windows,sublimetext
 log/
 sitecustomize.py
+startup.py
