--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holdmypics",
-  "version": "0.17.1",
+  "version": "0.18.0",
   "description": "Placeholder image generator",
   "repository": "https://github.com/mvwicky/holdmypics.git",
   "license": "MIT",
@@ -11,6 +11,8 @@
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
+    "lint:eslint": "eslint '**/*.ts' '**/*.js'",
+    "lint:styles": "stylelint 'src/scss/**/*.scss'",
     "prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
     "watch": "yarn run build:dev --watch"
   },
@@ -18,34 +20,31 @@
     "friendly-words": "^1.1.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-transform-classes": "^7.9.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
-    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@fullhuman/postcss-purgecss": "^4.0.0",
     "@popperjs/core": "^2.0.6",
     "@types/autoprefixer": "^9.7.1",
     "@types/clipboard": "^2.0.1",
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
-    "@types/mini-css-extract-plugin": "^0.9.0",
+    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.0.13",
-    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-    "@types/terser-webpack-plugin": "^4.0.0",
-    "@types/webpack": "^4.41.2",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^10.2.3",
     "babel-loader": "^8.0.6",
     "bourbon": "^7.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "clipboard": "^2.0.4",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.0",
-    "cssnano": "^4.1.10",
+    "css-loader": "^5.0.1",
     "debug": "^4.1.1",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.0.0",
@@ -55,18 +54,18 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "feather-icons": "^4.24.0",
-    "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "html-webpack-plugin": "^5.0.0-beta.6",
+    "mini-css-extract-plugin": "^1.3.4",
     "pattern.css": "^1.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.2.4",
+    "postcss-csso": "^5.0.0",
+    "postcss-loader": "^4.2.0",
     "prettier": "^2.0.0",
     "rfs": "^9.0.3",
     "sanitize.css": "^11.0.0",
     "sass": "^1.25.0",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^10.1.1",
     "sass-mq": "^5.0.1",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.1",
@@ -75,10 +74,10 @@
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.1",
     "tippy.js": "^6.0.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   },
   "engines": {
     "node": ">=12",
