Actually run tests in action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ name: Tests
       - main
 jobs:
   tests:
+    name: Test ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -33,13 +34,17 @@ jobs:
           python get-poetry.py -y
           source $HOME/.poetry/env
           poetry config virtualenvs.in-project true
-      - name: Set up cache
-        uses: actions/cache@v2
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
         run: |
           source $HOME/.poetry/env
           poetry install --no-interaction --no-dev -E tests
           yarn install --prod
+      - name: Set up cache
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Run pytest
+        run: |
+          source $HOME/.poetry/env
+          poetry run pytest --no-empty-dpi
