Get configuration from module (not class)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,10 +12,19 @@ jobs:
     env:
       TESTS_SKIP_INDEX: "1"
     runs-on: ubuntu-latest
+    # container: python:3.9-slim
     strategy:
       fail-fast: true
       matrix:
         python-version: [3.9]
+    # services:
+    #   redis:
+    #     image: redis
+    #     options: >-
+    #       --health-cmd "redis cli ping"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
