--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "webpack-cli": "^4.4.0"
   },
   "engines": {
-    "node": ">=12",
-    "npm": "6.14.x",
-    "yarn": "1.x"
+    "node": "^14",
+    "npm": "^6.14",
+    "yarn": "^1.21"
   }
 }
