--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "outDir": "../build"
+    "outDir": "./build"
   }
 }
