--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,23 +1,11 @@
-env:
-  browser: true
-  es6: true
-  node: false
+---
 extends:
   - "eslint:recommended"
   - plugin:prettier/recommended
   - plugin:import/recommended
   - plugin:import/typescript
-plugins:
-  - "@typescript-eslint"
-  - prettier
-  - import
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
+plugins: ["@typescript-eslint", prettier, import]
 parser: "@typescript-eslint/parser"
-parserOptions:
-  ecmaVersion: 10
-  sourceType: module
 rules:
   class-methods-use-this: 0
   complexity:
@@ -33,13 +21,11 @@ rules:
   no-extra-bind: error
   no-implied-eval: error
   no-unneeded-ternary: error
-  no-unused-vars: 0
+  no-unused-vars: "off"
   no-shadow:
     - error
     - allow: [_, cb, resolve, reject]
-  one-var:
-    - error
-    - never
+  one-var: [error, never]
   prefer-const: error
   semi: [error, always]
   sort-imports:
@@ -54,8 +40,7 @@ rules:
   import/dynamic-import-chunkname: 2
   import/order:
     - error
-    - alphabetize:
-        order: asc
+    - alphabetize: { order: asc }
       groups:
         - builtin
         - external
@@ -66,20 +51,15 @@ rules:
       newlines-between: always
   prettier/prettier: error
 settings:
-  import/cache:
-    lifetime: 60
-  import/core-modules: [os, path, process, fs]
+  import/cache: { lifetime: 30 }
   import/extensions: [.js, .ts, .jsx, .tsx]
-  import/external-module-folders: [node_modules]
   import/ignore:
     - \.(scss|css)$
     - autoprefixer
   import/parsers:
     "@typescript-eslint/parser": [.ts]
   import/resolver:
-    webpack:
-      config:
-        resolve: { extensions: [.ts] }
+    webpack: { config: "./webpack.config.ts" }
     typescript:
       alwaysTryTypes: true
       project:
@@ -87,9 +67,9 @@ settings:
         - tsconfig.json
 overrides:
   - files: [webpack.config.ts, postcss.config.js]
-    env:
-      node: true
-      browser: false
-  - files: ["src/ts/**/*.ts"]
-    globals:
-      PRODUCTION: readonly
+    env: { node: true, browser: false }
+    settings:
+      import/core-modules: [os, path, process, fs]
+env:
+  es6: true
+root: true
